# SimpleCar-Planning

./: .gitignore  CMakeLists.txt  MPC.cpp  README.md  SimpleCar_Planning_MPC.cpp  build.sh  data_convert.py  path.txt  pathMPC.txt
config/: config.cfg  config_geometric.cfg  kinematics_car.dae
data/: output_controls.txt  output_controls_app.txt  output_states.txt  output_states_app.txt  simple_car_path.txt  simple_car_path_app.txt  simple_car_path_geometric.txt  simple_car_path_geometric_app.txt
exec/: MPC  SimpleCarMain  simple_car_path.txt  simple_car_path_app.txt
include/: .RRTX.h.bak  MyPlanner.h.bak  SimpleCarMPC.h.bak  SimpleCarPlanning.h  ValidityChecker.h
results/: output_controls.txt  output_controls_app.txt  output_states.txt  output_states_app.txt  simple_car_path.txt  simple_car_path_app.txt  simple_car_path_geometric.txt  simple_car_path_geometric_app.txt
scripts/: animate_MPC.py  animate_MPC_app.py  path_convert.py  path_to_MPC.py  plot_square.py  visualize.py  visualize.py.bak  visualize_mpc.py  visualize_mpc.py.bak  visualize_with_mpc.py
src/: .MPC.cpp  .MPC_simulation.cpp.bak  .RRTX.cpp.bak  MPC.cpp  MPC_simulate.cpp  MPC_simulate_app.cpp  SimpleCarMPC.cpp.bak  SimpleCarMain.cpp  SimpleCarPlanning.cpp  ValidityChecker.cpp
